# pcomment

./: .gitignore  README.md  app.py  pyproject.toml  server.py
static/: style.css
templates/: base.html  comment.html  commentlist.html  index.html  list.html  redirect.html
